Fix line highlighting for copyleft page
White highlight doesn't look good on a black background.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -134,6 +134,8 @@ ol
   color: #c3d1cf
   width: 810px
   height: 540px
+  .highlighted
+    background: #202122
 
 .indent
   &:before
